--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1338,57 +1338,57 @@ p {
   }
 }
 .slider-content .main-title {
-  font-size: 100px;
+  font-size: 4rem;
   font-weight: 800;
-  letter-spacing: -5px;
+  letter-spacing: normal;
   margin: 15px 0 32px -5px;
   color: #fff;
   line-height: 60px;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .slider-content .main-title {
-    font-size: 90px;
+    font-size: 4rem;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .slider-content .main-title {
-    font-size: 80px;
+    font-size: 3rem;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-content .main-title {
-    font-size: 80px;
+    font-size: 3rem;
   }
 }
 @media (max-width: 767px) {
   .slider-content .main-title {
-    font-size: 44px;
+    font-size: 3rem;
     letter-spacing: 0px;
-    line-height: 48px;
+    line-height: 3rem;
   }
 }
 .slider-content .sub-title-2 {
   font-family: "Great Vibes", Sans-serif;
-  letter-spacing: -1.2px;
+  letter-spacing: normal;
   margin: -45px 0 0 30px;
-  font-size: 48px;
+  font-size: 2.5rem;
   font-style: italic;
   font-family: "Great Vibes", cursive;
   color: #fff;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .slider-content .sub-title-2 {
-    font-size: 36px;
+    font-size: 2.5rem;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-content .sub-title-2 {
-    font-size: 36px;
+    font-size: 2.5rem;
   }
 }
 @media (max-width: 767px) {
   .slider-content .sub-title-2 {
-    font-size: 36px;
+    font-size: 2.5rem;
     margin-left: 5px;
   }
 }
@@ -1418,33 +1418,33 @@ p {
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .slider-content .slider-description .text-heading .heading-1 {
-    font-size: 42px;
+    font-size: 2.5rem;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-content .slider-description .text-heading .heading-1 {
-    font-size: 42px;
+    font-size: 2.5rem;
   }
 }
 @media (max-width: 767px) {
   .slider-content .slider-description .text-heading .heading-1 {
-    font-size: 40px;
+    font-size: 2.5rem;
   }
 }
 .slider-content .slider-description .text-heading .heading-2 {
-  font-size: 30px;
+  font-size: 2rem;
 }
 @media (max-width: 767px) {
   .slider-content .slider-description .text-heading .heading-2 {
-    font-size: 26px;
+    font-size: 2rem;
   }
 }
 .slider-content .slider-description .text-heading .heading-3 {
-  font-size: 20px;
+  font-size: 2rem;
 }
 @media (max-width: 767px) {
   .slider-content .slider-description .text-heading .heading-3 {
-    font-size: 18px;
+    font-size: 2rem;
   }
 }
 .slider-content .slider-btn {
