--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1321,13 +1321,13 @@ p {
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .slider-content .sub-title {
-    font-size: 20px;
+    font-size: 2rem;
     line-height: 2em;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-content .sub-title {
-    font-size: 20px;
+    font-size: 2rem;
     line-height: 2em;
   }
 }
