--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -128,7 +128,7 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100%;
+  height: 760px;
 }
 
 /*===== All Button Style =====*/
