--- a/public/assets/css/ck-content.css
+++ b/public/assets/css/ck-content.css
@@ -602,6 +602,8 @@ margin-left: -15px;
     margin:15px!important
 }
 
+   .inventory-single-content .listing-social {}
+
 @media print {
     /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
     .ck-content .page-break {
