--- a/public/assets/css/ck-content.css
+++ b/public/assets/css/ck-content.css
@@ -612,6 +612,11 @@ margin-left: -15px;
    .inventory-single-dealership-tab {
        padding-top: 15px!important;
    }
+
+   .inventory-single-dealership-main {
+       padding-top: 10px!important;
+       padding-bottom: 10px!important;
+   }
 @media print {
     /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
     .ck-content .page-break {
