--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15783,3 +15783,6 @@ p {
 .product-social .listing-social .social-share .social li a.googleplus { background-color: #bf2828; }
 .product-social .listing-social .social-share .social li a.tumblr { background-color: #2b4873; }
 .product-social .listing-social .social-share .social li a.rss { background-color: #f37214; }
+.product-social .listing-social .social-share .social li a.ion-social-pinterest-outline { background-color: #bf2828; }
+.product-social .listing-social .social-share .social li a.reddit { background-color: #f37214; }
+.product-social .listing-social .social-share .social li a.pinterest { background-color: #bf2828; }
