--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -49,7 +49,7 @@ table.dataTable thead th {
 }
 
 .select2-selection__rendered {
-    padding-bottom: 5px !important;
+    /* padding-bottom: 5px !important; */
 }
 
 .has-error .invalid-feedback {
