--- a/public/assets/css/ck-content.css
+++ b/public/assets/css/ck-content.css
@@ -602,10 +602,10 @@ margin-left: -15px;
 .ck-content {
     border-top: solid 1px;
     margin: 15px 0 15px 0!important;
-    padding-top: 15px;
+    padding-top: 15px!important;
 }
 .ck-content p {
-    margin: 0 0 1rem !important;
+    margin: 0 0 1rem 0!important;
     font-size: 16px;
     line-height: 1.6;
 }
@@ -629,4 +629,15 @@ margin-left: -15px;
     .ck-content .page-break::after {
         display: none;
     }
+}
+
+.ck-content {
+    border-top: solid 1px;
+    margin: 15px 0 15px 0!important;
+    padding-top: 15px!important;
+}
+.ck-content p {
+    margin: 0 0 1rem 0!important;
+    font-size: 16px;
+    line-height: 1.6;
 }
