--- a/public/assets/css/ck-content.css
+++ b/public/assets/css/ck-content.css
@@ -1,10 +1,10 @@
-   /*
- * CKEditor 5 (v40.2.0) content styles.
- * Generated on Wed, 20 Dec 2023 12:30:50 GMT.
- * For more information, check out https://ckeditor.com/docs/ckeditor5/latest/installation/advanced/content-styles.html
- */
+/*
+* CKEditor 5 (v40.2.0) content styles.
+* Generated on Wed, 20 Dec 2023 12:30:50 GMT.
+* For more information, check out https://ckeditor.com/docs/ckeditor5/latest/installation/advanced/content-styles.html
+*/
 
- :root {
+:root {
     --ck-color-image-caption-background: hsl(0, 0%, 97%);
     --ck-color-image-caption-text: hsl(0, 0%, 20%);
     --ck-color-mention-background: hsla(341, 100%, 30%, 0.1);
@@ -26,16 +26,19 @@
 .ck-content .table .ck-table-resized {
     table-layout: fixed;
 }
+
 /* @ckeditor/ckeditor5-table/theme/tablecolumnresize.css */
 .ck-content .table table {
     overflow: hidden;
 }
+
 /* @ckeditor/ckeditor5-table/theme/tablecolumnresize.css */
 .ck-content .table td,
 .ck-content .table th {
     overflow-wrap: break-word;
     position: relative;
 }
+
 /* @ckeditor/ckeditor5-table/theme/tablecaption.css */
 .ck-content .table > figcaption {
     display: table-caption;
@@ -48,11 +51,13 @@
     font-size: .75em;
     outline-offset: -1px;
 }
+
 /* @ckeditor/ckeditor5-table/theme/table.css */
 .ck-content .table {
     margin: 0.9em auto;
     display: table;
 }
+
 /* @ckeditor/ckeditor5-table/theme/table.css */
 .ck-content .table table {
     border-collapse: collapse;
@@ -61,6 +66,7 @@
     height: 100%;
     border: 1px double hsl(0, 0%, 70%);
 }
+
 /* @ckeditor/ckeditor5-table/theme/table.css */
 .ck-content .table table td,
 .ck-content .table table th {
@@ -68,19 +74,23 @@
     padding: .4em;
     border: 1px solid hsl(0, 0%, 75%);
 }
+
 /* @ckeditor/ckeditor5-table/theme/table.css */
 .ck-content .table table th {
     font-weight: bold;
     background: hsla(0, 0%, 0%, 5%);
 }
+
 /* @ckeditor/ckeditor5-table/theme/table.css */
 .ck-content[dir="rtl"] .table th {
     text-align: right;
 }
+
 /* @ckeditor/ckeditor5-table/theme/table.css */
 .ck-content[dir="ltr"] .table th {
     text-align: left;
 }
+
 /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
 .ck-content .page-break {
     position: relative;
@@ -90,6 +100,7 @@
     align-items: center;
     justify-content: center;
 }
+
 /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
 .ck-content .page-break::after {
     content: '';
@@ -97,6 +108,7 @@
     border-bottom: 2px dashed hsl(0, 0%, 77%);
     width: 100%;
 }
+
 /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
 .ck-content .page-break__label {
     position: relative;
@@ -117,19 +129,23 @@
     -ms-user-select: none;
     user-select: none;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list {
     list-style: none;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list li {
     position: relative;
     margin-bottom: 5px;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list li .todo-list {
     margin-top: 5px;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label > input {
     -webkit-appearance: none;
@@ -144,13 +160,15 @@
     right: 0;
     margin-left: 0;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content[dir=rtl] .todo-list .todo-list__label > input {
-left: 0;
-margin-right: 0;
-right: -25px;
-margin-left: -15px;
+    left: 0;
+    margin-right: 0;
+    right: -25px;
+    margin-left: -15px;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label > input::before {
     display: block;
@@ -163,6 +181,7 @@ margin-left: -15px;
     border-radius: 2px;
     transition: 250ms ease-in-out box-shadow;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label > input::after {
     display: block;
@@ -170,41 +189,48 @@ margin-left: -15px;
     box-sizing: content-box;
     pointer-events: none;
     content: '';
-    left: calc( var(--ck-todo-list-checkmark-size) / 3 );
-    top: calc( var(--ck-todo-list-checkmark-size) / 5.3 );
-    width: calc( var(--ck-todo-list-checkmark-size) / 5.3 );
-    height: calc( var(--ck-todo-list-checkmark-size) / 2.6 );
+    left: calc(var(--ck-todo-list-checkmark-size) / 3);
+    top: calc(var(--ck-todo-list-checkmark-size) / 5.3);
+    width: calc(var(--ck-todo-list-checkmark-size) / 5.3);
+    height: calc(var(--ck-todo-list-checkmark-size) / 2.6);
     border-style: solid;
     border-color: transparent;
-    border-width: 0 calc( var(--ck-todo-list-checkmark-size) / 8 ) calc( var(--ck-todo-list-checkmark-size) / 8 ) 0;
+    border-width: 0 calc(var(--ck-todo-list-checkmark-size) / 8) calc(var(--ck-todo-list-checkmark-size) / 8) 0;
     transform: rotate(45deg);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label > input[checked]::before {
     background: hsl(126, 64%, 41%);
     border-color: hsl(126, 64%, 41%);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label > input[checked]::after {
     border-color: hsl(0, 0%, 100%);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label .todo-list__label__description {
     vertical-align: middle;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-content .todo-list .todo-list__label.todo-list__label_without-description input[type=checkbox] {
     position: absolute;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > input,
 .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input {
     cursor: pointer;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > input:hover::before, .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input:hover::before {
     box-shadow: 0 0 0 5px hsla(0, 0%, 0%, 0.1);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input {
     -webkit-appearance: none;
@@ -219,6 +245,7 @@ margin-left: -15px;
     right: 0;
     margin-left: 0;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content[dir=rtl] .todo-list .todo-list__label > span[contenteditable=false] > input {
     left: 0;
@@ -226,6 +253,7 @@ margin-left: -15px;
     right: -25px;
     margin-left: -15px;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input::before {
     display: block;
@@ -238,6 +266,7 @@ margin-left: -15px;
     border-radius: 2px;
     transition: 250ms ease-in-out box-shadow;
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input::after {
     display: block;
@@ -245,28 +274,32 @@ margin-left: -15px;
     box-sizing: content-box;
     pointer-events: none;
     content: '';
-    left: calc( var(--ck-todo-list-checkmark-size) / 3 );
-    top: calc( var(--ck-todo-list-checkmark-size) / 5.3 );
-    width: calc( var(--ck-todo-list-checkmark-size) / 5.3 );
-    height: calc( var(--ck-todo-list-checkmark-size) / 2.6 );
+    left: calc(var(--ck-todo-list-checkmark-size) / 3);
+    top: calc(var(--ck-todo-list-checkmark-size) / 5.3);
+    width: calc(var(--ck-todo-list-checkmark-size) / 5.3);
+    height: calc(var(--ck-todo-list-checkmark-size) / 2.6);
     border-style: solid;
     border-color: transparent;
-    border-width: 0 calc( var(--ck-todo-list-checkmark-size) / 8 ) calc( var(--ck-todo-list-checkmark-size) / 8 ) 0;
+    border-width: 0 calc(var(--ck-todo-list-checkmark-size) / 8) calc(var(--ck-todo-list-checkmark-size) / 8) 0;
     transform: rotate(45deg);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input[checked]::before {
     background: hsl(126, 64%, 41%);
     border-color: hsl(126, 64%, 41%);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label > span[contenteditable=false] > input[checked]::after {
     border-color: hsl(0, 0%, 100%);
 }
+
 /* @ckeditor/ckeditor5-list/theme/todolist.css */
 .ck-editor__editable.ck-content .todo-list .todo-list__label.todo-list__label_without-description input[type=checkbox] {
     position: absolute;
 }
+
 /* @ckeditor/ckeditor5-media-embed/theme/mediaembed.css */
 .ck-content .media {
     clear: both;
@@ -274,24 +307,29 @@ margin-left: -15px;
     display: block;
     min-width: 15em;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imageresize.css */
 .ck-content img.image_resized {
     height: auto;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imageresize.css */
 .ck-content .image.image_resized {
     max-width: 100%;
     display: block;
     box-sizing: border-box;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imageresize.css */
 .ck-content .image.image_resized img {
     width: 100%;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imageresize.css */
 .ck-content .image.image_resized > figcaption {
     display: block;
 }
+
 /* @ckeditor/ckeditor5-image/theme/image.css */
 .ck-content .image {
     display: table;
@@ -300,6 +338,7 @@ margin-left: -15px;
     margin: 0.9em auto;
     min-width: 50px;
 }
+
 /* @ckeditor/ckeditor5-image/theme/image.css */
 .ck-content .image img {
     display: block;
@@ -308,6 +347,7 @@ margin-left: -15px;
     min-width: 100%;
     height: auto;
 }
+
 /* @ckeditor/ckeditor5-image/theme/image.css */
 .ck-content .image-inline {
     /*
@@ -319,10 +359,12 @@ margin-left: -15px;
     max-width: 100%;
     align-items: flex-start;
 }
+
 /* @ckeditor/ckeditor5-image/theme/image.css */
 .ck-content .image-inline picture {
     display: flex;
 }
+
 /* @ckeditor/ckeditor5-image/theme/image.css */
 .ck-content .image-inline picture,
 .ck-content .image-inline img {
@@ -330,6 +372,7 @@ margin-left: -15px;
     flex-shrink: 1;
     max-width: 100%;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagecaption.css */
 .ck-content .image > figcaption {
     display: table-caption;
@@ -341,134 +384,164 @@ margin-left: -15px;
     font-size: .75em;
     outline-offset: -1px;
 }
+
 /* @ckeditor/ckeditor5-highlight/theme/highlight.css */
 .ck-content .marker-yellow {
     background-color: var(--ck-highlight-marker-yellow);
 }
+
 /* @ckeditor/ckeditor5-highlight/theme/highlight.css */
 .ck-content .marker-green {
     background-color: var(--ck-highlight-marker-green);
 }
+
 /* @ckeditor/ckeditor5-highlight/theme/highlight.css */
 .ck-content .marker-pink {
     background-color: var(--ck-highlight-marker-pink);
 }
+
 /* @ckeditor/ckeditor5-highlight/theme/highlight.css */
 .ck-content .marker-blue {
     background-color: var(--ck-highlight-marker-blue);
 }
+
 /* @ckeditor/ckeditor5-highlight/theme/highlight.css */
 .ck-content .pen-red {
     color: var(--ck-highlight-pen-red);
     background-color: transparent;
 }
+
 /* @ckeditor/ckeditor5-highlight/theme/highlight.css */
 .ck-content .pen-green {
     color: var(--ck-highlight-pen-green);
     background-color: transparent;
 }
+
 /* @ckeditor/ckeditor5-list/theme/list.css */
-.ck-content ol {
+
+
+.ck-content ol  {
     list-style-type: decimal;
-}
-/* @ckeditor/ckeditor5-list/theme/list.css */
-.ck-content ol ol {
-    list-style-type: lower-latin;
-}
-/* @ckeditor/ckeditor5-list/theme/list.css */
-.ck-content ol ol ol {
-    list-style-type: lower-roman;
-}
-/* @ckeditor/ckeditor5-list/theme/list.css */
-.ck-content ol ol ol ol {
-    list-style-type: upper-latin;
-}
-/* @ckeditor/ckeditor5-list/theme/list.css */
-.ck-content ol ol ol ol ol {
-    list-style-type: upper-roman;
-}
-/* @ckeditor/ckeditor5-list/theme/list.css */
-.ck-content ul {
-    list-style-type: disc;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 40px;
 }
-/* @ckeditor/ckeditor5-list/theme/list.css */
+
+.ck-content ol ol {
+    list-style-type: lower-latin;
+}
+
+.ck-content ol ol ol {
+    list-style-type: lower-roman;
+}
+
+.ck-content ol ol ol ol {
+    list-style-type: upper-latin;
+}
+
+.ck-content ol ol ol ol ol {
+    list-style-type: upper-roman;
+}
+
+.ck-content ul {
+
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+
+}
+
 .ck-content ul ul {
     list-style-type: circle;
 }
-/* @ckeditor/ckeditor5-list/theme/list.css */
+
 .ck-content ul ul ul {
     list-style-type: square;
 }
-/* @ckeditor/ckeditor5-list/theme/list.css */
+
 .ck-content ul ul ul ul {
     list-style-type: square;
 }
+
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-block-align-left,
 .ck-content .image-style-block-align-right {
     max-width: calc(100% - var(--ck-image-style-spacing));
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-align-left,
 .ck-content .image-style-align-right {
     clear: none;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-side {
     float: right;
     margin-left: var(--ck-image-style-spacing);
     max-width: 50%;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-align-left {
     float: left;
     margin-right: var(--ck-image-style-spacing);
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-align-center {
     margin-left: auto;
     margin-right: auto;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-align-right {
     float: right;
     margin-left: var(--ck-image-style-spacing);
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-block-align-right {
     margin-right: 0;
     margin-left: auto;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-style-block-align-left {
     margin-left: 0;
     margin-right: auto;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content p + .image-style-align-left,
 .ck-content p + .image-style-align-right,
 .ck-content p + .image-style-side {
     margin-top: 0;
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-inline.image-style-align-left,
 .ck-content .image-inline.image-style-align-right {
     margin-top: var(--ck-inline-image-style-spacing);
     margin-bottom: var(--ck-inline-image-style-spacing);
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-inline.image-style-align-left {
     margin-right: var(--ck-inline-image-style-spacing);
 }
+
 /* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 .ck-content .image-inline.image-style-align-right {
     margin-left: var(--ck-inline-image-style-spacing);
 }
+
 /* @ckeditor/ckeditor5-block-quote/theme/blockquote.css */
 .ck-content blockquote {
     overflow: hidden;
@@ -479,38 +552,46 @@ margin-left: -15px;
     font-style: italic;
     border-left: solid 5px hsl(0, 0%, 80%);
 }
+
 /* @ckeditor/ckeditor5-block-quote/theme/blockquote.css */
 .ck-content[dir="rtl"] blockquote {
     border-left: 0;
     border-right: solid 5px hsl(0, 0%, 80%);
 }
+
 /* @ckeditor/ckeditor5-basic-styles/theme/code.css */
 .ck-content code {
     background-color: hsla(0, 0%, 78%, 0.3);
     padding: .15em;
     border-radius: 2px;
 }
+
 /* @ckeditor/ckeditor5-font/theme/fontsize.css */
 .ck-content .text-tiny {
     font-size: .7em;
 }
+
 /* @ckeditor/ckeditor5-font/theme/fontsize.css */
 .ck-content .text-small {
     font-size: .85em;
 }
+
 /* @ckeditor/ckeditor5-font/theme/fontsize.css */
 .ck-content .text-big {
     font-size: 1.4em;
 }
+
 /* @ckeditor/ckeditor5-font/theme/fontsize.css */
 .ck-content .text-huge {
     font-size: 1.8em;
 }
+
 /* @ckeditor/ckeditor5-mention/theme/mention.css */
 .ck-content .mention {
     background: var(--ck-color-mention-background);
     color: var(--ck-color-mention-text);
 }
+
 /* @ckeditor/ckeditor5-horizontal-line/theme/horizontalline.css */
 .ck-content hr {
     margin: 15px 0;
@@ -518,6 +599,7 @@ margin-left: -15px;
     background: hsl(0, 0%, 87%);
     border: 0;
 }
+
 /* @ckeditor/ckeditor5-code-block/theme/codeblock.css */
 .ck-content pre {
     padding: 1em;
@@ -532,6 +614,7 @@ margin-left: -15px;
     font-style: normal;
     min-width: 200px;
 }
+
 /* @ckeditor/ckeditor5-code-block/theme/codeblock.css */
 .ck-content pre code {
     background: unset;
@@ -542,11 +625,10 @@ margin-left: -15px;
 
 /* Paragraph */
 .cke-content p {
-   margin: 0 0 1em;
-   font-size: 16px;
-   line-height: 1.6;
+    margin: 0 0 1em 0;
+    font-size: 16px;
+    line-height: 1.6;
 }
-
 
 
 /* Headings */
@@ -556,32 +638,32 @@ margin-left: -15px;
 .cke-content h4,
 .cke-content h5,
 .cke-content h6 {
-   margin-top: 20px;
-   margin-bottom: 10px;
-   font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 /* Unordered List */
 .cke-content ul {
-   list-style-type: disc;
-   margin-left: 20px;
+    list-style-type: disc;
+    margin-left: 20px;
 }
 
 /* Ordered List */
 .cke-content ol {
-   list-style-type: decimal;
-   margin-left: 20px;
+    list-style-type: decimal;
+    margin-left: 20px;
 }
 
 /* List Item */
 .cke-content li {
-   margin-bottom: 10px; /* Adjust spacing between list items as needed */
+    margin-bottom: 10px; /* Adjust spacing between list items as needed */
 }
 
 /* Images */
 .cke-content img {
-   max-width: 100%;
-   height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 /* Links */
@@ -596,35 +678,39 @@ margin-left: -15px;
 }
 
 .tab-content {
-    margin:10px!important
+    margin: 10px !important
 }
 
 .ck-content {
     border-top: solid 1px;
-    margin: 15px 0 15px 0!important;
-    padding-top: 15px!important;
+    margin: 15px 0 15px 0 !important;
+    padding-top: 15px !important;
 }
+
 .ck-content p {
-    margin: 0 0 1rem 0!important;
+    margin: 0 0 1rem 0 !important;
     font-size: 16px;
     line-height: 1.6;
 }
 
-.inventory-single-content .listing-social {}
+.inventory-single-content .listing-social {
+}
 
 .inventory-single-dealership-tab {
-    padding-top: 15px!important;
+    padding-top: 15px !important;
 }
 
 .inventory-single-dealership-main {
-    padding-top: 0px!important;
-    padding-bottom: 80px!important;
+    padding-top: 0px !important;
+    padding-bottom: 80px !important;
 }
+
 @media print {
     /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
     .ck-content .page-break {
         padding: 0;
     }
+
     /* @ckeditor/ckeditor5-page-break/theme/pagebreak.css */
     .ck-content .page-break::after {
         display: none;
@@ -633,11 +719,12 @@ margin-left: -15px;
 
 .ck-content {
     border-top: solid 1px;
-    margin: 15px 0 15px 0!important;
-    padding-top: 15px!important;
+    margin: 15px 0 15px 0 !important;
+    padding-top: 15px !important;
 }
+
 .ck-content p {
-    margin: 0 0 1rem 0!important;
+    margin: 0 0 1rem 0 !important;
     font-size: 16px;
     line-height: 1.6;
 }
