--- a/public/assets/css/ck-content.css
+++ b/public/assets/css/ck-content.css
@@ -682,7 +682,7 @@
 }
 
 .ck-content {
-    border-top: solid 1px;
+    /*border-top: solid 1px;*/
     margin: 15px 0 15px 0 !important;
     padding-top: 15px !important;
 }
@@ -718,7 +718,7 @@
 }
 
 .ck-content {
-    border-top: solid 1px;
+
     margin: 15px 0 15px 0 !important;
     padding-top: 15px !important;
 }
