--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1797,6 +1797,7 @@ p {
 
 .search-box-wrapper {
   background-color: #fff;
+    border: tan solid 2px!important;
   position: relative;
   border-radius: 3px;
   text-align: left;
