--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1372,8 +1372,7 @@ p {
   letter-spacing: normal;
   margin: -45px 0 0 0px;
   font-size: 2.5rem;
-  font-style: italic;
-
+  /*font-style: italic;*/
   color: #fff;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
