--- a/public/assets/css/plugins/slick.css
+++ b/public/assets/css/plugins/slick.css
@@ -154,3 +154,18 @@
 .slick-arrow.slick-hidden {
     display: none !important;
 }
+
+
+[class*='slick-slide'] {
+    height: 760px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+[class*='slick-slide'] img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; /* Ensures the image fits without distortion */
+    display: block;
+}
