--- a/public/assets/css/plugins/slick.css
+++ b/public/assets/css/plugins/slick.css
@@ -155,6 +155,13 @@
     display: none !important;
 }
 
+[class*='bg_cover'] {
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 1200px;
+}
 
 [class*='slick-slide'] {
     height: 760px;
