--- a/public/assets/css/plugins/slick.css
+++ b/public/assets/css/plugins/slick.css
@@ -155,24 +155,24 @@
     display: none !important;
 }
 
-[class*='bg_cover'] {
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 1200px;
-}
+/*[class*='bg_cover'] {*/
+/*    background-position: center center;*/
+/*    background-size: cover;*/
+/*    background-repeat: no-repeat;*/
+/*    width: 100%;*/
+/*    height: 1200px;*/
+/*}*/
 
-[class*='slick-slide'] {
-    height: 760px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+/*[class*='slick-slide'] {*/
+/*    height: 760px;*/
+/*    background-size: contain;*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: center;*/
+/*}*/
 
-[class*='slick-slide'] img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain; /* Ensures the image fits without distortion */
-    display: block;
-}
+/*[class*='slick-slide'] img {*/
+/*    max-width: 100%;*/
+/*    max-height: 100%;*/
+/*    object-fit: contain; !* Ensures the image fits without distortion *!*/
+/*    display: block;*/
+/*}*/
